{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 777,
  "lineage": "3b799684-f538-0ae4-13d9-fe4607b1d987",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:386921161930:loadbalancer/app/Vpground-Application-ALB/ccb369357b0210c2",
            "arn_suffix": "app/Vpground-Application-ALB/ccb369357b0210c2",
            "dns_name": "internal-Vpground-Application-ALB-990596602.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:386921161930:loadbalancer/app/Vpground-Application-ALB/ccb369357b0210c2",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Vpground-Application-ALB",
            "security_groups": [
              "sg-0a586acc06aa227fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071722ff6abb93da4"
              },
              {
                "subnet_id": "subnet-07330e4007f6ae8a7"
              }
            ],
            "subnets": [
              "subnet-071722ff6abb93da4",
              "subnet-07330e4007f6ae8a7"
            ],
            "vpc_id": "vpc-0ab534023dfddf65b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "module.common-vpc.aws_vpc.this",
            "module.main-public-1.aws_subnet.this",
            "module.main-public-2.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this-alblistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:386921161930:listener/app/Vpground-Application-ALB/ccb369357b0210c2/dc9b079be545b1a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:386921161930:targetgroup/Vpground-ALB-target-group/a899d1852ac27c33",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:386921161930:listener/app/Vpground-Application-ALB/ccb369357b0210c2/dc9b079be545b1a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:386921161930:loadbalancer/app/Vpground-Application-ALB/ccb369357b0210c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.this",
            "aws_alb_target_group.this-targetgroup",
            "aws_security_group.alb-security-group",
            "module.common-vpc.aws_vpc.this",
            "module.main-public-1.aws_subnet.this",
            "module.main-public-2.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:386921161930:targetgroup/Vpground-ALB-target-group/a899d1852ac27c33",
            "arn_suffix": "targetgroup/Vpground-ALB-target-group/a899d1852ac27c33",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:386921161930:targetgroup/Vpground-ALB-target-group/a899d1852ac27c33",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Vpground-ALB-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-019bc58989543febd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-217-32-113.compute-1.amazonaws.com",
            "public_ip": "3.217.32.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:internet-gateway/igw-0c28624ffa5c6492c",
            "id": "igw-0c28624ffa5c6492c",
            "owner_id": "386921161930",
            "tags": {
              "Name": "Main Gateway"
            },
            "tags_all": {
              "Name": "Main Gateway"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019bc58989543febd",
            "connectivity_type": "public",
            "id": "nat-0bb5e7516c650e721",
            "network_interface_id": "eni-06750580f85526f65",
            "private_ip": "10.0.1.219",
            "public_ip": "3.217.32.113",
            "subnet_id": "subnet-07330e4007f6ae8a7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "module.common-vpc.aws_vpc.this",
            "module.main-public-1.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:route-table/rtb-035efda939a4ce7e8",
            "id": "rtb-035efda939a4ce7e8",
            "owner_id": "386921161930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb5e7516c650e721",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Private"
            },
            "tags_all": {
              "Name": "Main Private"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.main-private",
            "module.common-vpc.aws_vpc.this",
            "module.main-public-1.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:route-table/rtb-06e3408bc9d07bd6b",
            "id": "rtb-06e3408bc9d07bd6b",
            "owner_id": "386921161930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c28624ffa5c6492c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPG IGW Route Table"
            },
            "tags_all": {
              "Name": "VPG IGW Route Table"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09655952750f86e82",
            "route_table_id": "rtb-035efda939a4ce7e8",
            "subnet_id": "subnet-03dd33155a040abbc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.main-private",
            "aws_route_table.main-private",
            "module.common-vpc.aws_vpc.this",
            "module.main-private-1.aws_subnet.this",
            "module.main-public-1.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01216ff59703860b0",
            "route_table_id": "rtb-035efda939a4ce7e8",
            "subnet_id": "subnet-0955fa7df729d8145"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.main-private",
            "aws_route_table.main-private",
            "module.common-vpc.aws_vpc.this",
            "module.main-private-2.aws_subnet.this",
            "module.main-public-1.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05171baba818fe084",
            "route_table_id": "rtb-06e3408bc9d07bd6b",
            "subnet_id": "subnet-07330e4007f6ae8a7"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "module.common-vpc.aws_vpc.this",
            "module.main-public-1.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013e59aaeb49da322",
            "route_table_id": "rtb-06e3408bc9d07bd6b",
            "subnet_id": "subnet-071722ff6abb93da4"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "module.common-vpc.aws_vpc.this",
            "module.main-public-2.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:security-group/sg-0a586acc06aa227fe",
            "description": "Terraform ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a586acc06aa227fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "386921161930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform ALB security group"
            },
            "tags_all": {
              "Name": "Terraform ALB security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance1-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:security-group/sg-006c53210a39ce03c",
            "description": "VPG SG for instance 1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006c53210a39ce03c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Vpground instace 1 sg",
            "name_prefix": "",
            "owner_id": "386921161930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vpground instace 1 sg"
            },
            "tags_all": {
              "Name": "Vpground instace 1 sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.common-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:vpc/vpc-0ab534023dfddf65b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d743bb0acd290f3e",
            "default_route_table_id": "rtb-087392f4516c3f5b0",
            "default_security_group_id": "sg-0842e3db21853d91a",
            "dhcp_options_id": "dopt-fd4f7987",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ab534023dfddf65b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-087392f4516c3f5b0",
            "owner_id": "386921161930",
            "tags": {
              "Name": "VetrisPlayground VPC"
            },
            "tags_all": {
              "Name": "VetrisPlayground VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-private-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:subnet/subnet-03dd33155a040abbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03dd33155a040abbc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386921161930",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-private-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:subnet/subnet-0955fa7df729d8145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0955fa7df729d8145",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386921161930",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-public-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:subnet/subnet-07330e4007f6ae8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07330e4007f6ae8a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386921161930",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-public-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:subnet/subnet-071722ff6abb93da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-071722ff6abb93da4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386921161930",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0ab534023dfddf65b"
          },
          "dependencies": [
            "module.common-vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}